feat: Implementing first persistence with kotlin
