# src/main/kotlin/meemo/campaigns/CampaignController.kt
@@ -1,32 +1,46 @@
 package meemo.campaigns
 
+import kotlinx.coroutines.flow.Flow
 import meemo.service.api.CampaignsApiService
 import meemo.service.api.model.Campaign
+import meemo.service.api.model.CampaignCreateRequest
+import meemo.service.api.model.CampaignResponse
 import meemo.service.api.model.Error
+import meemo.tenants.Tenant
 import org.springframework.stereotype.Service
 import org.springframework.web.bind.annotation.RestController
 
 @Service
 class CampaignController : CampaignsApiService {
+
+
     override suspend fun archiveCampaign(campaignId: String): Error {
         TODO("Not yet implemented")
     }
 
-    override suspend fun createCampaign(campaign: Campaign) {
-        TODO("Not yet implemented")
+    override suspend fun createCampaign(campaignCreateRequest: CampaignCreateRequest) {
+        val campaign = campaignCreateRequest.toEntity()
+
+        val createCampaign = CreateCampaign()
+
+        // result = createCampaign(campaign)
+
+        // Render result to API
     }
+
 
     override suspend fun duplicateCampaign(campaignId: String): Error {
         TODO("Not yet implemented")
     }
 
-    override suspend fun getCampaign(campaignId: String): Campaign {
+    override fun findCampaigns(limit: Int?): Flow<CampaignResponse> {
         TODO("Not yet implemented")
     }
 
-    override suspend fun getCampaigns(limit: Int?): Error {
+    override suspend fun getCampaign(campaignId: String): CampaignResponse {
         TODO("Not yet implemented")
     }
+
 
     override suspend fun removeCampaign(campaignId: String): Error {
         TODO("Not yet implemented")
@@ -40,4 +54,8 @@ class CampaignController : CampaignsApiService {
         TODO("Not yet implemented")
     }
 
+}
+
+fun CampaignCreateRequest.toEntity() {
+    Campaign(name!!, Tenant("test"))
 }
