# src/main/resources/openapi/api.yaml
@@ -26,7 +26,7 @@ paths:
     get:
       summary: 'Get list of campaigns'
       description: ''
-      operationId: getCampaigns
+      operationId: findCampaigns
       tags:
         - campaigns
       parameters:
@@ -38,6 +38,8 @@ paths:
             type: integer
             format: int32
       responses:
+        '200':
+          $ref: '#/components/responses/CampaignListResponse'
         default:
           $ref: '#/components/responses/ErrorResponse'
     post:
@@ -47,7 +49,7 @@ paths:
       tags:
         - campaigns
       requestBody:
-        $ref: '#/components/requestBodies/CampaignCreateRequest'
+        $ref: '#/components/requestBodies/CampaignCreateBody'
       responses:
         '201':
           description: Campaign created (null response).
@@ -69,7 +71,7 @@ paths:
             type: string
       responses:
         default:
-          $ref: '#/components/responses/CampaignGetResponse'
+          $ref: '#/components/responses/CampaignDetailResponse'
     put:
       summary: 'Update campaign details'
       description: ''
@@ -412,13 +414,13 @@ paths:
 
 components:
   requestBodies:
-    CampaignCreateRequest:
+    CampaignCreateBody:
       description: Campaign to create
       required: true
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Campaign'
+            $ref: '#/components/schemas/CampaignCreateRequest'
     ItemCreateRequest:
       description: Create campaign item
       required: true
@@ -435,12 +437,6 @@ components:
             $ref: '#/components/schemas/Version'
 
   responses:
-    CampaignGetResponse:
-      description: Campaign details
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Campaign'
     CampaignListResponse:
       description: List of campaigns
       content:
@@ -448,7 +444,13 @@ components:
           schema:
             type: array
             items:
-              $ref: '#/components/schemas/Campaign'
+              $ref: '#/components/schemas/CampaignResponse'
+    CampaignDetailResponse:
+      description: Campaign details
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/CampaignResponse'
     ErrorResponse:
       description: Unexpected error
       content:
@@ -467,7 +469,13 @@ components:
       required:
         - code
         - message
-    Campaign:
+    CampaignCreateRequest:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Name of the campaign
+    CampaignResponse:
       type: object
       properties:
         id:
